--- a/client/src/components/main/questionPage/question/index.css
+++ b/client/src/components/main/questionPage/question/index.css
@@ -43,6 +43,18 @@
 
 .question_author {
   color: red;
+  display: inline-block;
+}
+
+.question_karma {
+  border-radius: 25px;
+  width: fit-content;
+  height: fit-content;
+  padding: 5px;
+  color: white;
+  background: gray;
+  display: inline-block;
+  margin-left: 5px;
 }
 
 .question_meta {
