--- a/client/src/components/main/subforumDetails/index.css
+++ b/client/src/components/main/subforumDetails/index.css
@@ -63,6 +63,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
+  gap: 5px;
 }
 
 .stat-label {
@@ -72,6 +73,7 @@
 .stat-value {
   font-weight: 600;
   color: #333;
+  text-align: right;
 }
 
 .subforum-moderators,
