--- a/client/src/components/main/questionPage/question/index.css
+++ b/client/src/components/main/questionPage/question/index.css
@@ -1,7 +1,8 @@
 .question {
   display: flex;
   flex-direction: row;
-  border-top: #000000 1px dashed;
+  padding: 1rem;
+  border-top: #AAAAAA 1px solid;
 }
 
 .postStats {
