--- a/client/src/components/profileSettings/index.css
+++ b/client/src/components/profileSettings/index.css
@@ -73,6 +73,7 @@
   
   /* Buttons: 
      Adjust margins so they're not all bunched up horizontally */
+  .toggle-password-button,
   .login-button,
   .delete-button {
     margin-top: 15px;
@@ -125,12 +126,6 @@
   .toggle-password-button {
     background-color: #ddd;
     color: #333;
-    border: none;
-    padding: 5px 10px;
-    margin-top: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 14px;
   }
   
   .toggle-password-button:hover {
