dropdown menu moderators

--- a/client/src/components/main/subforumSettings/index.css
+++ b/client/src/components/main/subforumSettings/index.css
@@ -5,6 +5,10 @@
   position: relative;
 }
 
+.selected {
+  background-color: #d3d3d3; /* Highlight color */
+}
+
 .subforum-settings-container h1 {
   margin-bottom: 30px;
   color: #333;
