fix: posting question with subformID now auto self upvotes, repositioned remove and pin button in subforum

--- a/client/src/components/main/subforumDetails/index.css
+++ b/client/src/components/main/subforumDetails/index.css
@@ -319,3 +319,28 @@
 .new-question-modal .close-button:hover {
   color: #333;
 }
+
+.pin-button {
+  margin: 0;
+  display: inline-block;
+  background-color: #6c757d;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  font-size: .9rem;
+  padding: 8px 16px;
+  transition: background-color .2s;
+}
+
+.remove-button {
+  display: inline-block;
+  background-color: #c82333;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  font-size: .9rem;
+  padding: 8px 16px;
+  transition: background-color .2s;
+}
