working UI for settings page and new subforum page.

--- a/client/src/components/main/subforumSettings/index.css
+++ b/client/src/components/main/subforumSettings/index.css
@@ -176,3 +176,8 @@
   color: #666;
   margin-top: 4px;
 }
+
+.selected {
+  background-color: #d3d3d3; /* Highlight color */
+  color: #000; /* Text color */
+}
