--- a/client/src/components/main/subforumSettings/index.css
+++ b/client/src/components/main/subforumSettings/index.css
@@ -14,6 +14,13 @@
   color: #333;
 }
 
+.subforum-settings-form {
+  display: block;
+  gap: 20px;
+  width: 100%;
+  margin-right: 0px;
+}
+
 .settings-actions {
   display: flex;
   justify-content: space-between;
@@ -168,4 +175,9 @@
   font-size: 0.85rem;
   color: #666;
   margin-top: 4px;
+}
+
+.selected {
+  background-color: #d3d3d3; /* Highlight color */
+  color: #000; /* Text color */
 }
